use types and do swagger for responses
